--- a/html/email.html.twig
+++ b/html/email.html.twig
@@ -56,19 +56,19 @@
       <mj-group>
         <!-- 1 -->
         <mj-column>
-          <mj-image padding="0px" width="40px" src="https://momdoes.art/wp-content/uploads/2024/08/icon-delivery.png"></mj-image>
+          <mj-image padding="0px" width="40px" src="{{ getAssetUrl('themes/'~template~'/assets/icon-delivery.png', null, null, true ) }}"></mj-image>
           <mj-spacer height="20px"></mj-spacer>
           <mj-text padding="0px" font-size="16px" color="#0F3BD2" line-height="24px" css-class="bd-text">Same-day delivery available</mj-text>
         </mj-column>
         <!-- 2 -->
         <mj-column>
-          <mj-image padding="0px" width="40px" src="https://momdoes.art/wp-content/uploads/2024/08/icon-discount.png"></mj-image>
+          <mj-image padding="0px" width="40px" src="{{ getAssetUrl('themes/'~template~'/assets/icon-discount.png', null, null, true ) }}"></mj-image>
           <mj-spacer height="20px"></mj-spacer>
           <mj-text padding="0px" font-size="16px" color="#0F3BD2" line-height="24px" css-class="bd-text">Subscriber-only discounts</mj-text>
         </mj-column>
         <!-- 3 -->
         <mj-column>
-          <mj-image padding="0px" width="40px" src="https://momdoes.art/wp-content/uploads/2024/08/icon-natural.png"></mj-image>
+          <mj-image padding="0px" width="40px" src="{{ getAssetUrl('themes/'~template~'/assets/icon-natural.png', null, null, true ) }}"></mj-image>
           <mj-spacer height="20px"></mj-spacer>
           <mj-text padding="0px" font-size="16px" color="#0F3BD2" line-height="24px" css-class="bd-text">Sustainable natural ingredients</mj-text>
         </mj-column>
